# photoshoot

./: .gitignore  Cargo.toml  README.md  gif2mp4.sh
src/: canon.rs  gravity.rs  lib.rs  main.rs  object.rs  photo.rs  physics.rs  rgb.rs  verlet.rs
