[package]
name = "photoshoot"
description = "Generate a GIF of your photo shoot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
gif = "0.12.0"
glam = "0.24.2"
image = "0.24.7"
itertools = "0.11.0"

[profile.dev]
opt-level = 3
